--- a/实验记录.md
+++ b/实验记录.md
@@ -472,7 +472,7 @@ taskset -c 0 ~/Long/QEMU/qemu-8.0.0/build/qemu-loongarch64 -cpu la464 -L /opt/sy
 
 Java Flight Recorder ( JFR ) 是一种用于收集有关正在运行的 Java 应用程序的诊断和分析数据的工具。它集成到 Java 虚拟机中，性能开销很低，因此即使在负载较重的生产环境中也可以使用[^18]。该方法对平台架构没有要求，只要能运行 Java 就可以采用。
 
-Arthas 支持 `jfr` 命令，开启后将全面收集各种运行时时间，例如 CPU 使用率、事件前后的 Java 堆大小、锁持有者的线程 ID 等，收集的结果将以 jfr 文件的形式存储。
+Arthas 支持 `jfr` 命令，开启后将全面收集各种运行时数据，例如 CPU 使用率、事件前后的 Java 堆大小、锁持有者的线程 ID 等，收集的结果将以 jfr 文件的形式存储。
 
 在 Arthas Web Console 中输入以下命令：
 
